--- a/assets/scss/utilities/_form.scss
+++ b/assets/scss/utilities/_form.scss
@@ -1,13 +1,32 @@
 
-	textarea,
 	input[type="text"] {
-		height: 40px;
+		height: 35px;
 		border-radius: 5px;
 		background: $light;
-		padding: 0 15px;
+		padding: 10px;
 		width: 100%;
 		border: 1px solid $light-darken;
         font-size: 15px;
+		&:focus {
+            background: #fffaf8;
+			border-color: #faccba;
+			outline: none;
+			box-shadow: none;
+		}
+		&.error {
+			border-color: red;
+		}
+	}
+	textarea {
+		min-height: 35px;
+		border-radius: 5px;
+		background: $light;
+		padding: 5px;
+		width: 100%;
+		border: 1px solid $light-darken;
+        font-size: 15px;
+		// margin-bottom: -2px;
+		box-shadow: none;
 		&:focus {
             background: #fffaf8;
 			border-color: #faccba;
